8割くらい完成

--- a/articles/c2e5d5d72388ae.md
+++ b/articles/c2e5d5d72388ae.md
@@ -1,17 +1,86 @@
 ---
 title: "開発メンバー4人のスタートアップですが、開発広報始めます"
-emoji: "🦁"
+emoji: "🎉"
 type: "idea" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: ["ベンチャー", "採用", "zenn"]
 published: false
 ---
 
-かきたいこと
+はじめまして！Lisa Technologies 株式会社エンジニアインターンの[なかがわはじめ](https://zenn.dev/ikenohi)と申します！
+この度、弊社ではエンジニア組織拡大のための開発広報の施策としてテックブログを始めることにいたしました！
+https://lisatech.blog
+本稿ではテックブログのローンチを記念して、ブログを開始した経緯や少人数でブログを継続するための工夫についてお話できたらと思います！
 
-- 背景・課題感
-- どういう手段をとったか
-- 出発までの流れ
-- これから課題になりそうなこと
+# 1.15 億円の資金調達！開発チームの拡大が急務に
+
+飲食店が運用するフードデリバリーの最適化を行うためのプロダクト「フードデリバリーマネージャー（FDM）」を開発する弊社では、2021 年の 9 月に 1.15 億円の資金調達を完了いたしました。
+https://prtimes.jp/main/html/rd/p/000000013.000038052.html
+しかしその時点での主要な開発メンバーは、リードエンジニア、フロントエンドエンジニア、バックエンドエンジニア、デザイナー各 1 名ずつの計 4 人だけ。PMF に向けて開発を活性化させるべく、開発組織の拡大＆基盤強化が重要な課題となりました。
+
+そこで、11 月からジョインしたインターン生である筆者が、「組織文化の開発」と「開発広報の開始」をメインイシューとし、自社テックブログの開発に取り掛かったのです。
+
+# テックブログは続かない
+
+ジョインしてすぐテックブログの開発タスクをアサインされた筆者は思いました。
+
+> **「この規模でブログ始めてもどうせすぐ続かなくなるだろうなあ...」**
+
+多くのブログサイトは「立ち上げ当初は多少盛り上がり、数ヶ月たつと更新されなくなる」という同じ轍を踏んでいきます。
+
+https://note.com/makaibito/n/n2d9e84a959c0#k4ns4
+
+特にテックブログには「技術的に高度な内容を書くこと」が是とされている雰囲気がなんとなく漂っており、現時点でアウトプットの文化がない&リソースがカツカツ&若いメンバーばかり な弊社チームにとって、テックブログの執筆が大きな心理的負担になることは目に見えていました。
+
+# ゴールはアウトプットの文化を作ること
+
+「なんとかうまくやる方法はないだろうか」と、”開発広報” ”技術広報” ”テックブログ”などのキーワードで検索しまくっていたところ、以下の記事を発見しました。
+
+https://offers.jp/media/hr/a_1929
+
+ゴールはアウトプットの文化を作ること。これだ！と思いました。
+
+「開発広報」という目線で見ると、プロダクトや開発チームの認知度を向上させるために「技術的により高度な記事を」「より高い頻度で」公開することを重視せざるを得ません。そしてこれは執筆への心理的負担になり、テックブログの死因に繋がります。
+
+しかし、「たとえ技術的に高度な内容でなくても、アウトプットすること自体が良いことである」という前提に立ち、「アウトプットの文化を作ること」を目標にすれば、少人数からでも無理なくブログを続けられるのではないか。筆者には一筋の光が見えたのでした。
+
+# 「メンバー個人の投稿のハブ」としての会社ブログ
+
+ブログ運営の設計の鍵は、「どうやって執筆のインセンティブをもたせるか」でした。ブログを続けるためにはエンジニアやデザイナーの協力が欠かせません。**プロダクト開発する分のリソースをわざわざ割いてまでブログを書く理由**が必要なのです。
+
+また、チームのリードエンジニアが「個人の活躍幅を最大化させることで、結果的にチームの成果が最大になる」という考えを持っていたこともあり、執筆の成果がなるべく多く個人に還元される形式にしたいと思っていました。
+
+そこで見つけたのが、[Ubie Engineers' Blogs](https://blog.ubie.tech/)です。こちらのブログは会社のテックブログでありながら、開発メンバーの個人的な投稿を RSS で集約することでサイトを成立させています。メンバーは自身のサイトで投稿することができるため、まさに理想的な構成でした。
+https://note.com/ubie/n/n54c7628383ee
+
+Ubie Engineers' Blogs は CatNose さんが公開している OSS、[team-blog-hub](https://github.com/catnose99/team-blog-hub)を利用しているとのことだったので、弊社のテックブログでも採用することにしました。カラーテーマ、ヘッダーのリンク、サイトメタデータ、メンバー情報などをいじるだけですぐに公開に持っていけるという神 OSS でした。ありがとうございました！
+
+https://zenn.dev/catnose99/articles/cb72a73368a547756862
+
+まずは「2 週間のスプリントごとに開発メンバーによる投稿を 1 記事以上」という目標を立て、スプリントベースで投稿を継続する仕組みを試すつもりです。執筆に消極的なメンバーにも「1 人でブログ執筆を継続するのは難しいが、業務時間を使って定期的・強制的にブログを書くことができる」とプラスに捉えてもらうことにしています。
+
+また、開発メンバーの投稿を集約するだけでなく新しく会社公式の Zenn アカウントを作ることにもしました。ですので、弊社テックブログでは「会社公式の Zenn アカウントの投稿＋開発メンバー個々人の投稿」が集約される形となっております。
+
+新しく会社の Zenn アカウントを作成した理由は、「弊社の技術選択」や「弊社がこれからやりたい技術的なチャレンジ」など、投稿の内容によっては会社の名前を使って公開したいものもあると判断したからです。本投稿は会社公式アカウントの初投稿なので、応援の気持ちを込めていいねを押してくださると嬉しいです！
+
+# 開発広報インターンのお仕事
+
+開発広報を本格的に開始するにあたって、開発広報インターン職をきちんと設けることにしました（こちらは運良くリファラルで採用できました！）。開発広報インターンの方には「アウトプットの文化を作る」という目標のもと、以下のようなお仕事をしていただきます。
+
+### 会社の Zenn アカウントで、「Lisa でこれからやりたいこと」を定期的に発信する
+
+### メンバーが投稿するたびに Slack 上で褒め殺し、アウトプット文化を推進する
+
+### 書き始めのハードルを下げるために、記事ネタやトピックパターンを収集・整理する
+
+### 希望があればメンバーの執筆に対して投稿前にレビューを行う
+
+読みにくい箇所や誤字脱字等を指摘できれば OK で、技術的な内容に関する指摘は求めないことにします。推敲を厳しく求めすぎると執筆者のプレッシャーにもなりますので。
+
+# これから
+
+テックブログの公開こそしたものの、「アウトプットの文化を作る」という目標に対してはまだまだスタート地点に立っただけにすぎません。スプリント計画通りにブログを投稿できるか？開発広報の人材は確保し続けられるのか？など、不安はたくさんあります。
+
+とはいえ、**良い文化を作る**という目標には希望しかありません。弊社の社内環境が自分のようなインターンを含め全員にとって心地よい場所になり、結果的に一緒にプロダクトを作る仲間が増えたらいいなと思っています。
 
 ---
 
@@ -19,7 +88,7 @@ published: false
 Lisa Technologies では積極的にエンジニアを採用しております。
 資金調達済でこれからどんどん拡大していく面白いフェーズですので、ぜひ覗いてみてください！
 
-Wantedly 募集一覧
+**Wantedly 募集一覧**
 
 - [事業推進のためのプロダクトロードマップを CEO と共に、PdM 募集！](https://www.wantedly.com/projects/753234)
 - [Amplify/React/Typescript でアジャイル開発](https://www.wantedly.com/projects/765141)
