--- a/articles/58952f8b34f816.md
+++ b/articles/58952f8b34f816.md
@@ -71,7 +71,7 @@ https://zapier.com/apps/google-forms/integrations/productboard
 
 4. 指示に従って連携完了
 
-新しく回答があるたびに、設定の際に抽出した回答内容をこのように Insight にそのまま蓄積することができます。
+新しく回答があるたびに、設定の際に抽出した回答内容をこのように Insights にそのまま蓄積することができます。
 
 ![](https://storage.googleapis.com/zenn-user-upload/163268f40a04-20220131.png)
 _雑な例ですみません_
