Insight→Insights(2回目)

--- a/articles/58952f8b34f816.md
+++ b/articles/58952f8b34f816.md
@@ -116,7 +116,7 @@ https://chrome.google.com/webstore/detail/productboard-make-product/mlpbdkpkicfk
 
 ## 顧客の声とタスクを紐付ける
 
-Insight に蓄積された顧客の声を、バックログのタスクと紐付けることができます。
+Insights に蓄積された顧客の声を、バックログのタスクと紐付けることができます。
 
 使い方はとっても簡単で、「文章を選択 → 紐付けたいタスクを選択」だけで OK。これを開発陣が行うことで、そのタスクがなぜ必要なのか、どれくらい重要なのかを顧客の声から判断することができます。
 
