--- a/articles/58952f8b34f816.md
+++ b/articles/58952f8b34f816.md
@@ -20,9 +20,9 @@ https://productboard.com
 
 弊社が Productboard の導入を決めた理由は、顧客の声をプロダクトに反映するフローが整っていなかったことでした。
 
-[FDM](https://fooddeliverymanager.com/) という toB のプロダクトを開発している弊社では、顧客の声をキャッチするのは主に Sales や Customer Success のチームです。彼らは日々前線に立って顧客の声を聞いてくださっているのですが、それらをどこに集約するのかは特に決まっていませんでした。Salesforce にメモ書きしておくだけのときもあれば、Slack や Mtg で全体に共有するときもあるし、わざわざ Notion にドキュメントを残しておくときもあります。
+[FDM](https://fooddeliverymanager.com/) という toB のプロダクトを開発している弊社では、顧客の声をキャッチするのは主に Sales や Customer Success のチームです。彼らは日々前線に立って顧客の声を聞いてくれているのですが、それらをどこに集約するのかは特に決まっていませんでした。Salesforce にメモ書きしておくだけのときもあれば、Slack や Mtg で全体に共有するときもあるし、わざわざ Notion にドキュメントを残しておくときもあります。
 
-ですので、開発側が顧客の声にアクセスしたいときにどこを見に行けばよいか判断が難しい状況になっていました。よって顧客の声をプロダクトに反映するのは、頻繁にビジネスサイドとやりとりする開発リーダーの属人的な仕事になってしまっていました。
+ですので、開発側が顧客の声にアクセスしたいときにどこを見ればよいか判断が難しい状況になっていました。よって顧客の声をプロダクトに反映するのは、頻繁にビジネスサイドとやりとりする開発リーダーの属人的な仕事になってしまっていました。
 
 この習慣がボトルネックとなってか、組織全体としても顧客の声をプロダクトに反映することに苦手意識を感じるようになります。そこで「これではいけない、顧客の声をどこかに集約し、スムーズにプロダクトに反映できるようにならなければ」ということになり、Productboard を試してみることにしたのです。
 
